<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:src="@drawable/prancheta_22_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/appName"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/campoCidade"
        android:autofillHints="Cidade"
        android:hint="@string/nome_da_cidade_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@color/cinza_claro"
        android:layout_marginHorizontal="30dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintBottom_toTopOf="@+id/gerarRelatorio" />


    <Button
        android:id="@+id/gerarRelatorio"
        android:layout_width="190dp"
        android:layout_height="54dp"
        android:layout_marginBottom="40dp"
        android:text="@string/obter_previsao"
        android:backgroundTint="@color/botao_principal"
        android:textColor="@color/botao_principal_texto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>